ingress/5-2-1_echoserver.yml
## create RS and SVC by above configuration file
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: echoserver
spec:
    selector:
        matchLabels:
            app: echoserver
    replicas: 1
    template:
        metadata:
            name: echoserver
            labels: 
                app: echoserver
                project: chapter5
                service: echoserver
        spec:
         containers:
         - name: echoserver
           image: gcr.io/google_containers/echoserver:1.4
           ports:
           - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: echoserver
spec:
    type: NodePort
    selector:
        project: chapter5
        service: echoserver
    ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
