ingress/5-2-1_nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx
spec:
  selector:
    matchLabels:  
      project: chapter5
  replicas: 2 
  template: 
    metadata: 
      labels:
        project: chapter5
        service: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: nginx
spec:
  type: NodePort
  selector:
    project: chapter5
    service: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
