ingress/5-2-1_ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-example
    annotation: 
        #ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: devops.k8s
          http:
            paths:
                - path: /welcome
                  backend:
                    serviceName: nginx
                    servicePort: 80
                - path: /echoserver
                  backend:
                    serviceName: echoserver
                    servicePort: 8080
